# weather_forecast

./: API_README.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  test_api.py
models/: feature_importance_GradientBoosting_20250928_052241.csv  feature_importance_RandomForest_tuned_topk_20250929_004019.csv  model_summary_DummyClassifier_20250928_033307.txt  model_summary_RandomForest_tuned_topk_20250929_004019.txt  precipitation_model_summary_GradientBoosting_20250928_052241.txt  precipitation_regressor_best_GradientBoosting_20250928_052241.joblib  precipitation_regressor_best_GradientBoosting_20250928_052241.pkl  precipitation_regressor_metadata_GradientBoosting_20250928_052241.json  rain_classifier_best_DummyClassifier_20250928_033307.joblib  rain_classifier_best_DummyClassifier_20250928_033307.pkl  rain_classifier_metadata_DummyClassifier_20250928_033307.json  rain_classifier_metadata_RandomForest_tuned_topk_20250929_004019.json
notebooks/: 36120-25SP-AT2-student_id-experiment_ precipitation.ipynb  36120-25SP-AT2-student_id-experiment_rain.ipynb  Daily weather forecasting EDA.ipynb  EDA.ipynb  Hourly weather forecasting EDA.ipynb  data_colletion.ipynb
reports/: 36120 - AdvMLA - AT2 Report Template.docx  ~$120 - AdvMLA - AT2 Report Template.docx
weather_forecast/: main.py
