[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "weather_forecast"
version = "0.0.1"
description = "Sydney weather forecasting web application"
authors = [
  { name = "Afraz Ul Haque" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["weather_forecast"]
include = ["pyproject.toml", "weather_forecast/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["weather_forecast"]
force-sort-within-sections = true

