[project]
name = "weather-forecast"
version = "0.1.0"
description = ""
authors = [
    {name = "Afraz Ul Haque"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (==2.2.2)",
    "jupyterlab (==4.4.4)",
    "scikit-learn (==1.5.1)",
    "openmeteo-requests (>=1.7.2,<2.0.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "retry-requests (>=2.0.0,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
